syntax = "proto3";

import "google/protobuf/empty.proto";
import "dev/restate/events.proto";

package eventhandler;

service EventHandler {
  rpc Handle(dev.restate.Event) returns (google.protobuf.Empty);
}
